--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,6 +1,6 @@
 NODE_ENV = development
 PORT = 3000
-DATABASE = mongodb+srv://dheeraj:UMzrtaLxG1gPH38L@cluster1.agjiceh.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb+srv://dheeraj_new:dheeraj24@cluster1.agjiceh.mongodb.net/?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD = UMzrtaLxG1gPH38L
 JWT_SECRET = security_ultra_pro_max_provided_by_me_as_secret
